add h2 to project